<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background ="@color/COLOR5"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="45sp" />

    <Button
        android:id="@+id/option1_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/option1_text"
        android:textAllCaps="false"
        android:background="@color/COLOR1"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/option2_button"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:text="@string/option2_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR3"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/option3_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option3_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR4"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/option4_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option4_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR2"
        android:textColor="@android:color/black"
        />

    <Button
        android:id="@+id/option5_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option5_text"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@color/COLOR6"
        android:textColor="@android:color/black"
        />


</LinearLayout>